--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
-name: "AI Code Review"
+name: nodejs-ai-code-review"
 description: "Analyze a Node.js PR diff using OpenAI and provide structured feedback."
-author: "Your Name"
+author: cjpablo92
+branding:
+  icon: 'terminal'
+  color: 'white'
 runs:
   using: "composite"
   steps:
