--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: nodejs-ai-code-review"
-description: "Analyze a Node.js PR diff using OpenAI and provide structured feedback."
+description: Analyze a Node.js PR diff using OpenAI and provide structured feedback.
 author: cjpablo92
 branding:
   icon: 'terminal'
